2006-01-19  Jakub Steiner <jimmac@ximian.com>

	* mimetypes/Makefile.am: install the icons
	* mimetypes/font-x-generic.svg
	* mimetypes/fonx-x-generic.svg: fix typo
	* mimetypes/gnome-mime-application-x-gnome-saved-search.svg:
		removed. will need to go to icon-naming-utils (linking to
		folder-saved-search)
	* mimetypes/text-html.svg: small tweaks

2006-01-19  Jakub Steiner <jimmac@ximian.com>

	* scalable/mimetypes/application-x-executable.svg
	* scalable/mimetypes/audio-x-generic.svg
	* scalable/mimetypes/fonx-x-generic.svg
	* scalable/mimetypes/image-x-generic.svg
	* scalable/mimetypes/package-x-generic.svg
	* scalable/mimetypes/text-html.svg
	* scalable/mimetypes/text-x-generic.svg
	* scalable/mimetypes/text-x-script.svg
	* scalable/mimetypes/video-x-generic.svg
	* scalable/mimetypes/x-office-address-book.svg
	* scalable/mimetypes/x-office-calendar.svg
	* scalable/mimetypes/x-office-document.svg
	* scalable/mimetypes/x-office-presentation.svg
	* scalable/mimetypes/x-office-spreadsheet.svg: scalable mimetypes

2006-01-18  Jakub Steiner <jimmac@ximian.com>

	* scalable/places/user-trash.svg
	* scalable/status/user-trash-full.svg: alignment/color fixes

2006-01-18  Jakub Steiner <jimmac@ximian.com>

	* document-print: bitmaps for print icon
	
2006-01-17  Luca Ferretti  <elle.uca@libero.it>

	* index.theme.in: fixed a typo in Directories key

2006-01-17  Jakub Steiner <jimmac@ximian.com>

	*	22x22/mimetypes/audio-x-generic.png
	* 22x22/mimetypes/font-x-generic.png
	* 22x22/mimetypes/image-x-generic.png
	* 22x22/mimetypes/package-x-generic.png
	* 22x22/mimetypes/text-html.png
	* 22x22/mimetypes/text-x-generic.png
	* 22x22/mimetypes/text-x-script.png
	* 22x22/mimetypes/video-x-generic.png
	* 22x22/mimetypes/x-office-address-book.png
	* 22x22/mimetypes/x-office-calendar.png
	* 22x22/mimetypes/x-office-document.png
	* 22x22/mimetypes/x-office-presentation.png
	* 22x22/mimetypes/x-office-spreadsheet.png
	*	16x16/mimetypes/audio-x-generic.png